# ml4ts-course

./: README.md  pyproject.toml
data/: chemical_process.parquet  electricity_au.parquet  electricity_au_month.parquet  energy_demand.parquet  google.parquet
notebooks/: 01-introduction.ipynb  02-forecasting-models.ipynb  02-naive-forecasting-models.ipynb  03-basic-transformations.ipynb  03-working-with-sktime.ipynb  04-decomposition-methods.ipynb  05-exponential-smoothing.ipynb  06-evaluating-forecasts.ipynb  07-arima-family.ipynb  08-forecasting-advanced-topics.ipynb  09-time-series-classification.ipynb  _backup.ipynb  utils.py
